[tool.poetry]
name = "respekt_mel"
version = "0.1.0"
description = ""
authors = ["jk"]

[tool.poetry.dependencies]
python = "^3.10"
pyquery = "^1.4.3"
pandas = "^1.4.2"
numpy = "^1.22.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
requests = "^2.27.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
